New/Updated results

--- a/notebooks/03_feature_extraction.ipynb
+++ b/notebooks/03_feature_extraction.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "24ac746c",
    "metadata": {},
    "outputs": [
@@ -76,20 +76,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TF-IDF shape: (1861669, 10000) (465418, 10000)\n"
+      "TF-IDF shape: (1861669, 15000) (465418, 15000)\n"
      ]
     }
    ],
    "source": [
     "X_train_tfidf, X_test_tfidf, vectorizer = tfidf_vectorize(\n",
-    "    X_train, X_test, max_features=10000, ngram_range=(1,1)\n",
+    "    X_train, X_test, max_features=15000\n",
     ")\n",
     "print(\"TF-IDF shape:\", X_train_tfidf.shape, X_test_tfidf.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d73e41e2",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7e7211ff",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,8 @@
        "    height: 14px;\n",
        "    cursor: pointer;\n",
        "}\n",
-       "</style><body><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>TfidfVectorizer(max_features=10000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>TfidfVectorizer</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.7/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html\">?<span>Documentation for TfidfVectorizer</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
+       "</style><body><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>TfidfVectorizer(max_features=15000, min_df=5, ngram_range=(1, 2),\n",
+       "                sublinear_tf=True)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>TfidfVectorizer</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.7/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html\">?<span>Documentation for TfidfVectorizer</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
        "        <div class=\"estimator-table\">\n",
        "            <details>\n",
        "                <summary>Parameters</summary>\n",
@@ -699,7 +700,7 @@
        "        </tr>\n",
        "    \n",
        "\n",
-       "        <tr class=\"default\">\n",
+       "        <tr class=\"user-set\">\n",
        "            <td><i class=\"copy-paste-icon\"\n",
        "                 onclick=\"copyToClipboard('ngram_range',\n",
        "                          this.parentElement.nextElementSibling)\"\n",
@@ -719,13 +720,13 @@
        "        </tr>\n",
        "    \n",
        "\n",
-       "        <tr class=\"default\">\n",
+       "        <tr class=\"user-set\">\n",
        "            <td><i class=\"copy-paste-icon\"\n",
        "                 onclick=\"copyToClipboard('min_df',\n",
        "                          this.parentElement.nextElementSibling)\"\n",
        "            ></i></td>\n",
        "            <td class=\"param\">min_df&nbsp;</td>\n",
-       "            <td class=\"value\">1</td>\n",
+       "            <td class=\"value\">5</td>\n",
        "        </tr>\n",
        "    \n",
        "\n",
@@ -735,7 +736,7 @@
        "                          this.parentElement.nextElementSibling)\"\n",
        "            ></i></td>\n",
        "            <td class=\"param\">max_features&nbsp;</td>\n",
-       "            <td class=\"value\">10000</td>\n",
+       "            <td class=\"value\">15000</td>\n",
        "        </tr>\n",
        "    \n",
        "\n",
@@ -799,13 +800,13 @@
        "        </tr>\n",
        "    \n",
        "\n",
-       "        <tr class=\"default\">\n",
+       "        <tr class=\"user-set\">\n",
        "            <td><i class=\"copy-paste-icon\"\n",
        "                 onclick=\"copyToClipboard('sublinear_tf',\n",
        "                          this.parentElement.nextElementSibling)\"\n",
        "            ></i></td>\n",
        "            <td class=\"param\">sublinear_tf&nbsp;</td>\n",
-       "            <td class=\"value\">False</td>\n",
+       "            <td class=\"value\">True</td>\n",
        "        </tr>\n",
        "    \n",
        "                  </tbody>\n",
@@ -857,10 +858,11 @@
        "</script></body>"
       ],
       "text/plain": [
-       "TfidfVectorizer(max_features=10000)"
+       "TfidfVectorizer(max_features=15000, min_df=5, ngram_range=(1, 2),\n",
+       "                sublinear_tf=True)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
